<resources>
    <string name="app_name">Garden Irrigation System</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="watering_percentage_title">Soil Moisture</string>

    <string name="prefs_hint_moisture">Soil Moisture Level</string>

    <string name="error_notnumber">Must be a number</string>
    <string name="error_toolong">Number too long</string>
    <string name="location_permission_explanation" >We require location permission in order to access your current WiFi network information and to connect to Bluetooth. \n We in no way collect your location. This permission is required. </string>
    <string name="location_permission_explanation_title" >Location Permission</string>
    <string name="bluetooth_permission_explanation" >We require Bluetooth permission in order to connect to the product and send it the user preferences. \n This permission is required.</string>
    <string name="bluetooth_permission_explanation_title" >Bluetooth Permission</string>
    <string name="proceed" >Grant</string>
    <string name="cancel" >Cancel</string>
    <string name="setup_ssid_hint">WiFi SSID</string>
    <string name="error_moisture_required">Moisture Level is required.</string>
    <string name="error_moisture_toolong">Moisture Level must be a percent.</string>
    <string name="error_moisture_notnumber">Moisture Level must be a percent.</string>
    <string name="error_ssid_required">WiFi SSID is required</string>
    <string name="error_ssid_toolong">Wifi SSID is too long</string>

    <string name="scan">Scan</string>
    <string name="setup_password_hint">WiFi Password</string>
    <string name="error_password_missing">Wifi Password is Required</string>
    <string name="error_password_toolong">Wifi Password is too long</string>
    <string name="button_next">Next</string>

</resources>