<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
                app:key="signature"
                app:title="@string/signature_title"
                app:useSimpleSummaryProvider="true" />

        <EditTextPreference
                app:key="soil_moisture"
                app:title="@string/watering_percentage_title"
                app:useSimpleSummaryProvider="true"
                android:inputType="number"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
                app:key="sync"
                app:title="@string/sync_title" />

        <SwitchPreferenceCompat
                app:key="attachment"
                app:title="@string/attachment_title"
                app:summaryOn="@string/attachment_summary_on"
                app:summaryOff="@string/attachment_summary_off"
                app:dependency="sync" />

    </PreferenceCategory>

</PreferenceScreen>